fix desktop logo z-index

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -124,7 +124,7 @@ button{
     background-repeat: no-repeat;
     background-size: cover;
     display: block;
-    z-index: -1;
+    z-index: 2;
     min-height: 120px;
     transition: all 1s ease-in-out;
     -moz-transition: all 1s ease-in-out;
